deployment/kubernetes/geocoder-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geocoder-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: geocoder-api
  template:
    metadata:
      labels:
        app: geocoder-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - image: ghcr.io/openearthplatforminitiative/geocoder-api:0.4.3
          name: geocoder-api
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: geocoder-api
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: geocoder-api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-geocoding
spec:
  stripPrefix:
    prefixes:
      - /geocoding
    forceSlash: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: geocoder-api
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/geocoding`) && !PathPrefix(`/geocoding/metrics`) && HeadersRegexp(`Authorization`, `.+`)
    services:
    - kind: Service
      name: geocoder-api
      port: 80
    middlewares:
    - name: stripprefix-geocoding
    - name: traefikmiddleware-cors@kubernetescrd
    - name: traefikmiddleware-jwt@kubernetescrd
    - name: traefikmiddleware-rate-limit-registered@kubernetescrd
  - kind: Rule
    match: PathPrefix(`/geocoding`) && !PathPrefix(`/geocoding/metrics`) && !HeadersRegexp(`Authorization`, `.+`)
    services:
    - kind: Service
      name: geocoder-api
      port: 80
    middlewares:
    - name: stripprefix-geocoding
    - name: traefikmiddleware-cors@kubernetescrd
    - name: traefikmiddleware-rate-limit-anonymous@kubernetescrd
